# specman

./: .gitignore  README.md  TODO.md
.github/workflows/: rust.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md
docs/: about.md  founding-spec.md  getting-started.md  lifecycle-ergonomics.md  roadmap.md
impl/markdown-templates/: impl.md
impl/specman-cli-rust/: impl.md
impl/specman-library/: impl.md
impl/specman-mcp-rust/: impl.md
spec/specman-cli/: spec.md
spec/specman-core/: spec.md
spec/specman-data-model/: spec.md
spec/specman-library/: spec.md
spec/specman-mcp/: spec.md
spec/specman-templates/: spec.md
src/: Cargo.toml
src/crates/specman/: Cargo.toml  README.md
src/crates/specman-cli/: Cargo.toml  README.md
src/crates/specman-cli/src/: cli.rs  context.rs  error.rs  formatter.rs  frontmatter.rs  lib.rs  templates.rs  util.rs
src/crates/specman-cli/src/commands/: implementation.rs  init.rs  mod.rs  scratch.rs  spec.rs  status.rs
src/crates/specman-cli/tests/: dependencies_commands.rs  init_command.rs  scratch_delete.rs  status_command.rs
src/crates/specman-mcp/: Cargo.toml  README.md
src/crates/specman-mcp/src/: completion.rs  error.rs  handle.rs  lib.rs  prompts.rs  resolve.rs  resources.rs  server.rs  session.rs  telemetry.rs  tools.rs
src/crates/specman-mcp/src/completion/: contracts.rs  index.rs  matching.rs  serialization.rs
src/crates/specman-mcp/src/templates/: compliance.md  impl.md  migration.md  scratch-feat.md  scratch-fix.md  scratch-ref.md  scratch-revision.md  spec.md
src/crates/specman-mcp/tests/: compliance_integration.rs  constraints_resources_integration.rs
src/crates/specman/src/: adapter.rs  analysis.rs  api.rs  dependency_tree.rs  env.rs  error.rs  front_matter.rs  lib.rs  lifecycle.rs  metadata.rs  persistence.rs  reference_validation.rs  scratchpad.rs  service.rs  shared_function.rs  template.rs  template_catalog.rs  validation.rs  workspace.rs
src/crates/specman/src/core/: env.rs  error.rs  mod.rs
src/crates/specman/src/graph/: tree.rs
src/crates/specman/src/index/: cache.rs  index.rs  indexer.rs  mod.rs  query.rs
src/crates/specman/src/metadata/: frontmatter.rs  mod.rs  mutation.rs  update_model.rs
src/crates/specman/src/ops/: create.rs  delete.rs  mod.rs  update.rs
src/crates/specman/src/storage/: adapter.rs  mod.rs  persistence.rs
src/crates/specman/src/structure/: cache.rs  index.rs  indexer.rs  mod.rs  query.rs
src/crates/specman/src/templates/: catalog.rs  engine.rs  mod.rs
src/crates/specman/src/templates/impl/: impl.md
src/crates/specman/src/templates/scratch/: feat.md  fix.md  ref.md  revision.md
src/crates/specman/src/validation/: analysis.rs  mod.rs  references.rs  status.rs
src/crates/specman/templates/impl/: impl.md
src/crates/specman/templates/prompts/: scratch-feat.md  scratch-fix.md  scratch-ref.md  scratch-revision.md
src/crates/specman/templates/spec/: spec.md
src/crates/specman/tests/: reference_validation.rs  structure_index_cache.rs  structure_indexing.rs  structure_rendering.rs  workspace_status_test.rs
templates/impl/: impl.md
templates/prompts/: impl.md  scratch-feat.md  scratch-fix.md  scratch-ref.md  scratch-revision.md  spec.md
templates/scratch/: fix.md  scratch.md
templates/spec/: spec.md
