[package]
name = "specman-cli"
version = "2.3.0"
edition = "2024"
authors.workspace = true
license = "MIT"
description = "Command-line interface for SpecMan workspaces"
default-run = "specman"

[[bin]]
name = "specman"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "string"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2"
specman = { version = "3.0.0", path = "../specman" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"