[package]
name = "specman-mcp"
version = "0.2.0"
edition = "2024"
authors.workspace = true
publish = true

[dependencies]
specman = { path = "../specman", version = "2.0.0" }
rmcp = { version = "0.11.0", features = ["transport-io", "schemars"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "io-std", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.1", features = ["derive", "semver1"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.10"