[package]
name = "specman-mcp"
version = "0.3.0"
edition = "2024"
authors.workspace = true
publish = true
description = "An MCP server to provide SpecMan functionality to AI"
license = "MIT"

[dependencies]
specman = { path = "../specman", version = "2.0.0" }
rmcp = { version = "0.11.0", features = ["transport-io", "schemars", "elicitation"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "io-std", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = { version = "1.1", features = ["derive", "semver1"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.10"