[package]
name = "specman"
version = "3.0.0"
edition = "2024"
authors.workspace = true
description = "SpecMan runtime library for dependency mapping, templating, and lifecycle automation."
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = { version = "1.1", features = ["derive", "semver1"] }
markdown = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
semver = { version = "1.0", features = ["serde"] }
ureq = { version = "2.9", features = ["tls"] }
url = "2.5"
sha2 = "0.10"
hex = "0.4"
handlebars = "4.3"
unicode-normalization = "0.1"
getrandom = "0.2"
regex = "1.12.2"
ignore = "0.4.25"

[dev-dependencies]
tempfile = "3.10"
